Fixed some small typo(s) :crab: :rooster:

--- a/polybookexchange/locale/fr/LC_MESSAGES/django.po
+++ b/polybookexchange/locale/fr/LC_MESSAGES/django.po
@@ -95,7 +95,7 @@ msgid "Submit"
 msgstr "Envoyer"
 
 #: templates/polybookexchange/add_book_request.html:13
-msgid "Cannot find the candidate. Is he already validated ?"
+msgid "Cannot find the candidate. Is it already validated ?"
 msgstr "Impossible de trouver le candidat. Est-il déjà validé ?"
 
 #: templates/polybookexchange/add_book_request.html:20
@@ -260,7 +260,7 @@ msgid "Logout"
 msgstr "Se déconnecter"
 
 #: templates/polybookexchange/base.html:63
-msgid "Back to the AGEPoly's website"
+msgid "Back to AGEPoly's website"
 msgstr "Retourner sur le site de l'AGEPoly"
 
 #: templates/polybookexchange/base.html:73
@@ -274,7 +274,7 @@ msgstr "Accueil"
 
 #: templates/polybookexchange/base.html:75
 #: templates/polybookexchange/index.html:11
-msgid "How it works ?"
+msgid "How does it works ?"
 msgstr "Comment ça marche ?"
 
 #: templates/polybookexchange/base.html:78
@@ -455,7 +455,7 @@ msgstr "Candidat n° :"
 
 #: templates/polybookexchange/candidate_fiche.html:35
 msgid ""
-"Your book will only be available in the sell area when you bring him to "
+"Your book will only be available in the sell area when you bring it to "
 "AGEPoly's event and we validated it"
 msgstr ""
 "Votre livre sera mis en vente seulement lorsque vous l'aurez apporté à "
@@ -507,7 +507,7 @@ msgstr "Sauvegarder"
 #: templates/polybookexchange/clean_candidates.html:5
 #: templates/polybookexchange/clean_candidates.html:9
 msgid "Old candidates cleanup"
-msgstr "Netoyage des anciens candidats"
+msgstr "Nettoyage des anciens candidats"
 
 #: templates/polybookexchange/clean_candidates.html:13
 msgid "Candidates deleted !"
@@ -649,7 +649,7 @@ msgstr ""
 "\t"
 
 #: templates/polybookexchange/howto.html:16
-msgid "How the book exchange works ?"
+msgid "How does the book exchange works ?"
 msgstr "Comment marche la bourse aux livres ?"
 
 #: templates/polybookexchange/howto.html:19
@@ -700,7 +700,7 @@ msgstr ""
 
 #: templates/polybookexchange/howto.html:37
 msgid ""
-"At least, you can come back to AGEPoly's desk, with you student card "
+"At last, you can come back to AGEPoly's desk, with you student card "
 "(Camipro) to collect your money"
 msgstr ""
 "Enfin, vous pouvez revenir au bureau de l'AGEPoly, avec votre carte "
@@ -739,11 +739,11 @@ msgid "The seller must be an EPFL student"
 msgstr "Le vendeur doit être un étudiant de l'EPFL"
 
 #: templates/polybookexchange/howto.html:54
-msgid "The AGEPoly won't be responsible for any lost or stolen book"
+msgid "AGEPoly won't be responsible for any lost or stolen book"
 msgstr "L'AGEPoly n'est pas responsable pour la perte ou de vol des livres"
 
 #: templates/polybookexchange/howto.html:55
-msgid "The AGEPoly won't be responsible for any deterioration of a book"
+msgid "AGEPoly won't be responsible for any deterioration of a book"
 msgstr "L'AGEPoly n'est pas responsable de l'éventuelle détérioration d'un livre"
 
 #: templates/polybookexchange/howto.html:56
@@ -780,7 +780,7 @@ msgstr ""
 "vos livres. Vous devez contacter rapidement l'AGEPoly."
 
 #: templates/polybookexchange/index.html:9
-msgid "Welcome on the AGEPoly's book exchange !"
+msgid "Welcome to AGEPoly's book exchange !"
 msgstr "Bienvenue sur la bourse aux livres de l'AGEPoly !"
 
 #: templates/polybookexchange/index.html:13
@@ -809,12 +809,12 @@ msgid "New candidate"
 msgstr "Nouveau candidat"
 
 #: templates/polybookexchange/propose.html:8
-msgid "Add a new candidate to sell"
+msgid "Add a new sales candidate"
 msgstr "Ajouter un nouveau candidat à la vente"
 
 #: templates/polybookexchange/propose.html:12
 msgid ""
-"There was an error submiting your book. Did you filled all fields ? Please "
+"There was an error submiting your book. Did you fill all fields ? Please "
 "try again."
 msgstr ""
 "Il y a eu une erreur lors de l'envoi de votre livre. Avez-vous rempli tous "
@@ -824,15 +824,16 @@ msgstr ""
 msgid ""
 "This page is the first step in the process to sell your book. You will pre-"
 "register the book in our database. You will then get a recepie that you need "
-"to bring your book at AGEPoly's desk."
+"to bring your book at AGEPoly's event (from Tuesday, March 1, 2022 to Thursday, "
+"March 3, 2022 between 9:00 AM and 5:00 PM at CE1 515)."
 msgstr ""
 "Cette page est la première étape du processus de mise en vente de votre "
 "livre. Vous allez pré-enregistrer le livre dans notre base de données. Vous "
-"recevrez ensuite une feuille que vous devrez apporter au bureau de l'AGEPoly."
+"recevrez ensuite une feuille que vous devrez apporter à l'évènement de l'AGEPoly du Mardi 1er Mars au Jeudi 3 Mars entre 9h et 17h en CE1 515 (ou bien présenter le document sur votre téléphone avec le livre)."
 
 #: templates/polybookexchange/propose.html:19
 msgid ""
-"Once the book submited, you have to bring it to AGEPoly's book exchange at CE1 515 from Tuesday, March 1, 2022 to Thursday, March 3, 2022 between 9:00 AM and 5:00 PM!"
+"Once the book is submitted, you have to bring it to AGEPoly's book exchange at CE1 515 from Tuesday, March 1, 2022 to Thursday, March 3, 2022 between 9:00 AM and 5:00 PM!"
 msgstr ""
 "Dès que livre est enregistré, vous devez l'amener à la bourse aux livres de l'AGEPoly en CE1 515 entre Mardi 1er Mars et Mercredi 3 Mars 2022 de 9h à 17h ! "
 
@@ -1050,12 +1051,16 @@ msgid ""
 "<br />\n"
 "One of your book (Title: <b>%(title)s</b>, exemplar id: <b>%(id)s</b>) is "
 "now in sale !<br />\n"
+"<br />At the end of the book exchange event, your book will be automaticaly transfered to the online book exchange (this website). Please note that it is your responsibility to get your book back : if you haven't asked for your book in 12 months, it will be automaticaly given to the central library, without the possibility to get it or your money back.<br/>\n"
 "<br />\n"
-"Thanks you for using the book exchange !<br />\n"
+"If you have any questions, don't hesitate to email services@agepoly.ch !\n"
 "<br />\n"
-"Bests,<br />\n"
 "<br />\n"
-"The AGEPoly's book exchange,<br />\n"
+"Thank you for using the book exchange !<br />\n"
+"<br />\n"
+"Best,<br />\n"
+"<br />\n"
+"AGEPoly's book exchange,<br />\n"
 "<br />\n"
 "<br />\n"
 "<i>(This email is sent automaticaly when a book is validated)</i>"
@@ -1064,7 +1069,11 @@ msgstr ""
 "Bonjour !<br />\n"
 "<br />\n"
 "Un de vos livres (Titre: <b>%(title)s</b>, exemplaire n°: <b>%(id)s</b>) est "
-"maitenant en vente !<br />\n"
+"maintenant en vente !<br />\n"
+"<br />\n"
+"<br />A la fin de l'évènement, votre livre sera automatiquement transféré à la bourse aux libres en ligne (ce site). Attention, c'est votre responsabilité de venir chercher votre livre au bureau de l'AGEPoly d'ici 14 mois, sans quoi il sera donné à la bibliothèque centrale, sans possibilité de récupérer le livre ou votre argent !<br/>\n"
+"<br />\n"
+"Si vous avez la moindre question, n'hésitez pas d'envoyer un mail à services@agepoly.ch !\n"
 "<br />\n"
 "Merci d'utiliser la bourse aux livres !<br />\n"
 "<br />\n"
@@ -1083,11 +1092,15 @@ msgid ""
 "\n"
 "One of your book (exemplar id: %(id)s) is now in sale !\n"
 "\n"
-"Thanks you for using the book exchange !\n"
+"At the end of the book exchange event, your book will be automaticaly transfered to the online book exchange (this website). Please note that it is your responsibility to get your book back : if you haven't asked for your book in 13 months, it will be automaticaly given to the central library, without the possibility to get it or your money back.\n"
 "\n"
-"Bests,\n"
+"If you have any questions, don't hesitate to email services@agepoly.ch !\n"
 "\n"
-"The AGEPoly's book exchange,\n"
+"Thank you for using the book exchange !\n"
+"\n"
+"Best,\n"
+"\n"
+"AGEPoly's book exchange,\n"
 "\n"
 "\n"
 "(This email is sent automaticaly when a book is validated)"
@@ -1096,6 +1109,10 @@ msgstr ""
 "Bonjour !\n"
 "\n"
 "Un de vos livres (Exemplaire n°:%(id)s) est maitenant en vente !\n"
+"\n"
+"A la fin de l'évènement, votre livre sera automatiquement transféré à la bourse aux libres en ligne (ce site). Attention, c'est votre responsabilité de venir chercher votre livre au bureau de l'AGEPoly d'ici 14 mois, sans quoi il sera donné à la bibliothèque centrale, sans possibilité de récupérer le livre ou votre argent !\n"
+"\n"
+"Si vous avez la moindre question, n'hésitez pas d'envoyer un mail à services@agepoly.ch !\n"
 "\n"
 "Merci d'utiliser la bourse aux livres !\n"
 "\n"
@@ -1115,11 +1132,11 @@ msgid ""
 "As said in our conditions, your book (exemplar id: <b>%(id)s</b>) has been "
 "removed from our system and offered to the main library.<br />\n"
 "<br />\n"
-"Thanks you for using the book exchange !<br />\n"
+"Thank you for using the book exchange !<br />\n"
 "<br />\n"
-"Bests,<br />\n"
+"Best,<br />\n"
 "<br />\n"
-"The AGEPoly's book exchange,<br />\n"
+"AGEPoly's book exchange,<br />\n"
 "<br />\n"
 "<br />\n"
 "<i>(This email is sent automaticaly when a book is removed)</i>"
@@ -1148,11 +1165,11 @@ msgid ""
 "As said in our conditions, your book (exemplar id: %(id)s) has been removed "
 "from our system and offered to the main library.\n"
 "\n"
-"Thanks you for using the book exchange !\n"
+"Thank you for using the book exchange !\n"
 "\n"
-"Bests,\n"
+"Best,\n"
 "\n"
-"The AGEPoly's book exchange,\n"
+"AGEPoly's book exchange,\n"
 "\n"
 "\n"
 "(This email is sent automaticaly when a book is removed)"
@@ -1160,7 +1177,7 @@ msgstr ""
 "\n"
 "Bonjour !\n"
 "\n"
-"Connte décrit dans nos conditions, votre livre (Exemplaire n°:%(id)s) a été "
+"Comme décrit dans nos conditions, votre livre (Exemplaire n°:%(id)s) a été "
 "retiré de notre système et donnée à la biliothèque centrale.\n"
 "\n"
 "Merci d'utiliser la bourse aux livres !\n"
@@ -1179,13 +1196,13 @@ msgid ""
 "Hi !<br />\n"
 "<br />\n"
 "One of your book (Title: <b>%(title)s</b>, exemplar id: <b>%(id)s</b>) has "
-"been sold ! You will soon receive informations about how to receive your money ! <br />\n"
+"been sold ! You can come to AGEPoly's desk to claim your money.<br />\n"
 "<br />\n"
-"Thanks you for using the book exchange !<br />\n"
+"Thank you for using the book exchange !<br />\n"
 "<br />\n"
-"Bests,<br />\n"
+"Best,<br />\n"
 "<br />\n"
-"The AGEPoly's book exchange,<br />\n"
+"AGEPoly's book exchange,<br />\n"
 "<br />\n"
 "<br />\n"
 "<i>(This email is sent automaticaly when a book is sold)</i>"
@@ -1194,7 +1211,8 @@ msgstr ""
 "Bonjour !<br />\n"
 "<br />\n"
 "Un de vos livres (Titre: <b>%(title)s</b>, exemplaire n°: <b>%(id)s</b>) à "
-"été vendu ! Vous allez recevoir bientôt les informations pour recevoir votre argent ! <br />\n"
+"été vendu ! Vous pouvez venir au bureau de l'AGEPoly récupérer votre "
+"argent<br />\n"
 "<br />\n"
 "Merci d'utiliser la bourse aux livres !<br />\n"
 "<br />\n"
@@ -1212,13 +1230,13 @@ msgid ""
 "Hi !\n"
 "\n"
 "One of your book (Title: %(title)s, exemplar id: %(id)s) has been sold ! You "
-" will soon receive informations about how to receive your money !\n"
+"can come to AGEPoly's desk to claim your money.\n"
 "\n"
-"Thanks you for using the book exchange !\n"
+"Thank you for using the book exchange !\n"
 "\n"
-"Bests,\n"
+"Best,\n"
 "\n"
-"The AGEPoly's book exchange,\n"
+"AGEPoly's book exchange,\n"
 "\n"
 "\n"
 "(This email is sent automaticaly when a book is sold)"
@@ -1227,7 +1245,7 @@ msgstr ""
 "Bonjour !\n"
 "\n"
 "Un de vos livres (Titre: %(title)s, exemplaire n°:%(id)s) a été vendu ! Vous "
-"Vous allez recevoir bientôt les informations pour recevoir votre argent !\n"
+"pouvez maintent venir au bureau de l'AGEPoly récupérer votre argent.\n"
 "\n"
 "Merci d'utiliser la bourse aux livres !\n"
 "\n"
@@ -1246,9 +1264,9 @@ msgid ""
 "<br />\n"
 "The book exemplar <b>%(id)s</b> has a new price: <b>%(price)s</b> !<br />\n"
 "<br />\n"
-"Bests,<br />\n"
+"Best,<br />\n"
 "<br />\n"
-"The book exchange,"
+"AGEPoly's book exchange,"
 msgstr ""
 "\n"
 "Bonjour !<br />\n"
@@ -1267,9 +1285,9 @@ msgid ""
 "\n"
 "The book exemplar %(id)s has a new price: %(price)s !\n"
 "\n"
-"Bests,\n"
+"Best,\n"
 "\n"
-"The book exchange,"
+"AGEPoly's book exchange,"
 msgstr ""
 "\n"
 "Bonjour !\n"
