--- a/polybookexchange/locale/fr/LC_MESSAGES/django.po
+++ b/polybookexchange/locale/fr/LC_MESSAGES/django.po
@@ -95,7 +95,7 @@ msgid "Submit"
 msgstr "Envoyer"
 
 #: templates/polybookexchange/add_book_request.html:13
-msgid "Cannot find the candidate. Is he already validated ?"
+msgid "Cannot find the candidate. Is it already validated ?"
 msgstr "Impossible de trouver le candidat. Est-il déjà validé ?"
 
 #: templates/polybookexchange/add_book_request.html:20
@@ -260,7 +260,7 @@ msgid "Logout"
 msgstr "Se déconnecter"
 
 #: templates/polybookexchange/base.html:63
-msgid "Back to the AGEPoly's website"
+msgid "Back to AGEPoly's website"
 msgstr "Retourner sur le site de l'AGEPoly"
 
 #: templates/polybookexchange/base.html:73
@@ -274,7 +274,7 @@ msgstr "Accueil"
 
 #: templates/polybookexchange/base.html:75
 #: templates/polybookexchange/index.html:11
-msgid "How it works ?"
+msgid "How does it works ?"
 msgstr "Comment ça marche ?"
 
 #: templates/polybookexchange/base.html:78
@@ -443,11 +443,11 @@ msgstr "Détails de la proposition"
 
 #: templates/polybookexchange/candidate_fiche.html:8
 msgid ""
-"You have to <a href='javascript:window.print()'>print</a> this page et put "
-"it inside the book you bring to AGEPoly's desk "
+"You have to <a href='javascript:window.print()'>print</a> this page and put "
+"it inside the book you bring to AGEPoly's event from Tuesday, March 1, 2022 to Thursday, March 3, 2022 between 9:00 AM and 5:00 PM at CE1 515(or present this document there) "
 msgstr ""
 "Vous devez <a href='javascript:window.print()'>imprimer</a> cette page et la "
-"mettre dans le livre, puis ammener le livre au bureau de l'AGEPoly"
+"mettre dans le livre, puis ammener le livre à l'évènement de l'AGEPoly du Mardi 1er Mars au Jeudi 3 Mars entre 9h et 17h en CE1 515 (ou bien présenter le document sur votre téléphone avec le livre)"
 
 #: templates/polybookexchange/candidate_fiche.html:13
 msgid "CandidateID:"
@@ -455,11 +455,11 @@ msgstr "Candidat n° :"
 
 #: templates/polybookexchange/candidate_fiche.html:35
 msgid ""
-"Your book will only be available in the sell area when you brigen him to "
-"AGEPoly's desk and we validated it"
+"Your book will only be available in the sell area when you bring it to "
+"AGEPoly's event and we validated it"
 msgstr ""
-"Votre livre sera mis en vente seulement lorsque vous l'aurez apporté au "
-"bureau de l'AGEPoly et que nous l'auront confirmé"
+"Votre livre sera mis en vente seulement lorsque vous l'aurez apporté à "
+"l'évènement de l'AGEPoly et que nous l'auront confirmé"
 
 #: templates/polybookexchange/candidate_fiche.html:37
 msgid ""
@@ -468,14 +468,6 @@ msgid ""
 msgstr ""
 "Vous pouvez accéder à cette page plus tard en utilisant le menu à gauche si "
 "vous ne pouvez pas imprimer maintenant."
-
-#: templates/polybookexchange/candidate_fiche.html:39
-msgid ""
-"You now have 14 days to bring the book to AGEPoly's desk, after the delay "
-"you will have to start over."
-msgstr ""
-"Vous avez maintenant 14 jours pour apporter le livre au bureau de l'AGEPoly. "
-"Après ce délai, vous devrez recommencer."
 
 #: templates/polybookexchange/candidate_fiche.html:41
 msgid "Close this window"
@@ -515,7 +507,7 @@ msgstr "Sauvegarder"
 #: templates/polybookexchange/clean_candidates.html:5
 #: templates/polybookexchange/clean_candidates.html:9
 msgid "Old candidates cleanup"
-msgstr "Netoyage des anciens candidats"
+msgstr "Nettoyage des anciens candidats"
 
 #: templates/polybookexchange/clean_candidates.html:13
 msgid "Candidates deleted !"
@@ -589,10 +581,10 @@ msgstr "Acheteur :"
 #: templates/polybookexchange/exemplar.html:70
 #, python-format
 msgid ""
-"To buy this book, please come to AGEPoly's desk and ask for the book with ID "
-"<b>%(id)s</b> !"
+"To buy this book, please come to AGEPoly's book exchange from Tuesday, March 1, 2022 to Thursday, March 3, 2022 between 9:00 AM and 5:00 PM at CE1 515 and find the book number "
+"<b>%(id)s</b>!"
 msgstr ""
-"Pour acheter de livre, merci de venir au bureau de l'AGEPoly et demander le "
+"Pour acheter ce livre, merci de venir à la bourse aux bouquins en CE1 515 entre 9h et 17h du Mardi 1er Mars au Jeudi 3 Mars et trouvez le "
 "livre n°<b>%(id)s</b> !"
 
 #: templates/polybookexchange/exemplar.html:81
@@ -657,7 +649,7 @@ msgstr ""
 "\t"
 
 #: templates/polybookexchange/howto.html:16
-msgid "How the book exchange works ?"
+msgid "How does the book exchange works ?"
 msgstr "Comment marche la bourse aux livres ?"
 
 #: templates/polybookexchange/howto.html:19
@@ -682,9 +674,9 @@ msgstr ""
 "Vous remplissez les informations requises et vous imprimez la page générée."
 
 #: templates/polybookexchange/howto.html:28
-msgid "You bring your book, with the printed page at the AGEPoly's desk."
+msgid "You bring your book, with the printed page at AGEPoly's event."
 msgstr ""
-"Vous apportez votre livre, avec la page imprimée, au bureau de l'AGEPoly."
+"Vous apportez votre livre, avec la page imprimée, à l'évènement de l'AGEPoly."
 
 #: templates/polybookexchange/howto.html:31
 msgid "Second step"
@@ -700,7 +692,7 @@ msgstr "Vous recevrez une confirmation automatique sur votre adresse @epfl.ch."
 
 #: templates/polybookexchange/howto.html:36
 msgid ""
-"When your book has been sold by another student, you will also recive an "
+"When your book has been sold to another student, you will also receive an "
 "automatic email"
 msgstr ""
 "Quand votre livre sera acheté par un autre étudiant, vous recevrez aussi un "
@@ -708,7 +700,7 @@ msgstr ""
 
 #: templates/polybookexchange/howto.html:37
 msgid ""
-"At least, you can comme back to the AGEPoly's desk, with you student card "
+"At last, you can come back to AGEPoly's desk, with you student card "
 "(Camipro) to collect your money"
 msgstr ""
 "Enfin, vous pouvez revenir au bureau de l'AGEPoly, avec votre carte "
@@ -728,14 +720,14 @@ msgstr "Vous mémorisez le numéro du livre (PAS LE NUMÉRO ISBN !)"
 
 #: templates/polybookexchange/howto.html:45
 msgid ""
-"If you found what you needed, you can come to the AGEPoly's desk with the "
-"money (only in cash !)"
+"If you found what you needed, you can come to AGEPoly's event with the "
+"money (in cash or camipro!)"
 msgstr ""
-"Si vous avez trouvé ce que vous cherchiez, vous pouvez venir au bureau de "
-"AGEPoly avec l'argent (uniquement en cash!)"
+"Si vous avez trouvé ce que vous cherchiez, vous pouvez venir à l'évènement de "
+"l'AGEPoly avec l'argent (en cash ou en camipro!)"
 
 #: templates/polybookexchange/howto.html:46
-msgid "You now have a new book !"
+msgid "You now have a new book!"
 msgstr "Vous avez un nouveau livre !"
 
 #: templates/polybookexchange/howto.html:49
@@ -747,11 +739,11 @@ msgid "The seller must be an EPFL student"
 msgstr "Le vendeur doit être un étudiant de l'EPFL"
 
 #: templates/polybookexchange/howto.html:54
-msgid "The AGEPoly won't be responsible for any lost or stolen book"
+msgid "AGEPoly won't be responsible for any lost or stolen book"
 msgstr "L'AGEPoly n'est pas responsable pour la perte ou de vol des livres"
 
 #: templates/polybookexchange/howto.html:55
-msgid "The AGEPoly won't be responsible for any deterioration of a book"
+msgid "AGEPoly won't be responsible for any deterioration of a book"
 msgstr "L'AGEPoly n'est pas responsable de l'éventuelle détérioration d'un livre"
 
 #: templates/polybookexchange/howto.html:56
@@ -788,7 +780,7 @@ msgstr ""
 "vos livres. Vous devez contacter rapidement l'AGEPoly."
 
 #: templates/polybookexchange/index.html:9
-msgid "Welcome on the AGEPoly's book exchange !"
+msgid "Welcome to AGEPoly's book exchange!"
 msgstr "Bienvenue sur la bourse aux livres de l'AGEPoly !"
 
 #: templates/polybookexchange/index.html:13
@@ -817,12 +809,12 @@ msgid "New candidate"
 msgstr "Nouveau candidat"
 
 #: templates/polybookexchange/propose.html:8
-msgid "Add a new candidate to sell"
+msgid "Add a new sales candidate"
 msgstr "Ajouter un nouveau candidat à la vente"
 
 #: templates/polybookexchange/propose.html:12
 msgid ""
-"There was an error submiting your book. Did you filled all fields ? Please "
+"There was an error submiting your book. Did you fill all fields ? Please "
 "try again."
 msgstr ""
 "Il y a eu une erreur lors de l'envoi de votre livre. Avez-vous rempli tous "
@@ -832,18 +824,18 @@ msgstr ""
 msgid ""
 "This page is the first step in the process to sell your book. You will pre-"
 "register the book in our database. You will then get a recepie that you need "
-"to bring your book at AGEPoly's desk."
+"to bring your book at AGEPoly's event (from Tuesday, March 1, 2022 to Thursday, "
+"March 3, 2022 between 9:00 AM and 5:00 PM at CE1 515)."
 msgstr ""
 "Cette page est la première étape du processus de mise en vente de votre "
 "livre. Vous allez pré-enregistrer le livre dans notre base de données. Vous "
-"recevrez ensuite une feuille que vous devrez apporter au bureau de l'AGEPoly."
+"recevrez ensuite une feuille que vous devrez apporter à l'évènement de l'AGEPoly du Mardi 1er Mars au Jeudi 3 Mars entre 9h et 17h en CE1 515 (ou bien présenter le document sur votre téléphone avec le livre)."
 
 #: templates/polybookexchange/propose.html:19
 msgid ""
-"One the book submited, you have 14 days to bring it to the AGEPoly's desk!"
+"Once the book is submitted, you have to bring it to AGEPoly's book exchange at CE1 515 from Tuesday, March 1, 2022 to Thursday, March 3, 2022 between 9:00 AM and 5:00 PM!"
 msgstr ""
-"Dès que livre est enregistré, vous avez 14 jours pour l'apporter au bureau de "
-"l'AGEPoly !"
+"Dès que livre est enregistré, vous devez l'amener à la bourse aux livres de l'AGEPoly en CE1 515 entre Mardi 1er Mars et Mercredi 3 Mars 2022 de 9h à 17h ! "
 
 #: templates/polybookexchange/propose.html:22
 msgid "Please accepts terms !"
@@ -898,10 +890,9 @@ msgid "this page (open a new windows)"
 msgstr "cette page (s'ouvre dans une nouvelle fenêtre)"
 
 #: templates/polybookexchange/propose_ok.html:12
-msgid "and put it inside the book. Don't forget to bring the book in 14 days !"
+msgid "and put it inside the book. Don't forget to bring the book to the event!"
 msgstr ""
-"et mettre la page dans le livre. N'oubliez pas d'apporter le livre dans les "
-"14 jours !"
+"et mettre la page dans le livre. N'oubliez pas d'apporter le livre à l'évènement !"
 
 #: templates/polybookexchange/propose_ok.html:17
 msgid "Back to the home page"
@@ -910,14 +901,6 @@ msgstr "Retourner sur la page d'accueil"
 #: templates/polybookexchange/proposed.html:11
 msgid "Proposition are deleted after 15 days."
 msgstr "Les propositions sont supprimées après 15 jours."
-
-#: templates/polybookexchange/proposed.html:12
-msgid ""
-"You only have 14 days to bring us your book after your submited into the "
-"system"
-msgstr ""
-"Vous avez seulement 14 jours pour apporter votre livre après que vous l'ayez "
-"entré dans le système"
 
 #: templates/polybookexchange/proposed.html:25
 msgid "ISBN::"
@@ -1068,12 +1051,16 @@ msgid ""
 "<br />\n"
 "One of your book (Title: <b>%(title)s</b>, exemplar id: <b>%(id)s</b>) is "
 "now in sale !<br />\n"
+"<br />At the end of the book exchange event, your book will be automaticaly transfered to the online book exchange (this website). Please note that it is your responsibility to get your book back : if you haven't asked for your book in 12 months, it will be automaticaly given to the central library, without the possibility to get it or your money back.<br/>\n"
 "<br />\n"
-"Thanks you for using the book exchange !<br />\n"
+"If you have any questions, don't hesitate to email services@agepoly.ch!\n"
 "<br />\n"
-"Bests,<br />\n"
 "<br />\n"
-"The AGEPoly's book exchange,<br />\n"
+"Thank you for using the book exchange!<br />\n"
+"<br />\n"
+"Best,<br />\n"
+"<br />\n"
+"AGEPoly's book exchange,<br />\n"
 "<br />\n"
 "<br />\n"
 "<i>(This email is sent automaticaly when a book is validated)</i>"
@@ -1082,7 +1069,11 @@ msgstr ""
 "Bonjour !<br />\n"
 "<br />\n"
 "Un de vos livres (Titre: <b>%(title)s</b>, exemplaire n°: <b>%(id)s</b>) est "
-"maitenant en vente !<br />\n"
+"maintenant en vente !<br />\n"
+"<br />\n"
+"<br />A la fin de l'évènement, votre livre sera automatiquement transféré à la bourse aux libres en ligne (ce site). Attention, c'est votre responsabilité de venir chercher votre livre au bureau de l'AGEPoly d'ici 14 mois, sans quoi il sera donné à la bibliothèque centrale, sans possibilité de récupérer le livre ou votre argent !<br/>\n"
+"<br />\n"
+"Si vous avez la moindre question, n'hésitez pas d'envoyer un mail à services@agepoly.ch !\n"
 "<br />\n"
 "Merci d'utiliser la bourse aux livres !<br />\n"
 "<br />\n"
@@ -1099,13 +1090,17 @@ msgid ""
 "\n"
 "Hi !\n"
 "\n"
-"One of your book (exemplar id: %(id)s) is now in sale !\n"
+"One of your book (exemplar id: %(id)s) is now in sale!\n"
 "\n"
-"Thanks you for using the book exchange !\n"
+"At the end of the book exchange event, your book will be automaticaly transfered to the online book exchange (this website). Please note that it is your responsibility to get your book back : if you haven't asked for your book in 13 months, it will be automaticaly given to the central library, without the possibility to get it or your money back.\n"
 "\n"
-"Bests,\n"
+"If you have any questions, don't hesitate to email services@agepoly.ch!\n"
 "\n"
-"The AGEPoly's book exchange,\n"
+"Thank you for using the book exchange!\n"
+"\n"
+"Best,\n"
+"\n"
+"AGEPoly's book exchange,\n"
 "\n"
 "\n"
 "(This email is sent automaticaly when a book is validated)"
@@ -1114,6 +1109,10 @@ msgstr ""
 "Bonjour !\n"
 "\n"
 "Un de vos livres (Exemplaire n°:%(id)s) est maitenant en vente !\n"
+"\n"
+"A la fin de l'évènement, votre livre sera automatiquement transféré à la bourse aux libres en ligne (ce site). Attention, c'est votre responsabilité de venir chercher votre livre au bureau de l'AGEPoly d'ici 14 mois, sans quoi il sera donné à la bibliothèque centrale, sans possibilité de récupérer le livre ou votre argent !\n"
+"\n"
+"Si vous avez la moindre question, n'hésitez pas d'envoyer un mail à services@agepoly.ch !\n"
 "\n"
 "Merci d'utiliser la bourse aux livres !\n"
 "\n"
@@ -1133,11 +1132,11 @@ msgid ""
 "As said in our conditions, your book (exemplar id: <b>%(id)s</b>) has been "
 "removed from our system and offered to the main library.<br />\n"
 "<br />\n"
-"Thanks you for using the book exchange !<br />\n"
+"Thank you for using the book exchange!<br />\n"
 "<br />\n"
-"Bests,<br />\n"
+"Best,<br />\n"
 "<br />\n"
-"The AGEPoly's book exchange,<br />\n"
+"AGEPoly's book exchange,<br />\n"
 "<br />\n"
 "<br />\n"
 "<i>(This email is sent automaticaly when a book is removed)</i>"
@@ -1146,7 +1145,7 @@ msgstr ""
 "Bonjour !<br />\n"
 "<br />\n"
 "Comme décrit dans nos conditions, votre livre (exemplaire n°: <b>%(id)s</b>) "
-"a été retiré de notre système et donné à la bilbiothèque centrale.<br />\n"
+"a été retiré de notre système et donné à la bibliothèque centrale.<br />\n"
 "<br />\n"
 "Merci d'utiliser la bourse aux livres !<br />\n"
 "<br />\n"
@@ -1166,11 +1165,11 @@ msgid ""
 "As said in our conditions, your book (exemplar id: %(id)s) has been removed "
 "from our system and offered to the main library.\n"
 "\n"
-"Thanks you for using the book exchange !\n"
+"Thank you for using the book exchange!\n"
 "\n"
-"Bests,\n"
+"Best,\n"
 "\n"
-"The AGEPoly's book exchange,\n"
+"AGEPoly's book exchange,\n"
 "\n"
 "\n"
 "(This email is sent automaticaly when a book is removed)"
@@ -1178,7 +1177,7 @@ msgstr ""
 "\n"
 "Bonjour !\n"
 "\n"
-"Connte décrit dans nos conditions, votre livre (Exemplaire n°:%(id)s) a été "
+"Comme décrit dans nos conditions, votre livre (Exemplaire n°:%(id)s) a été "
 "retiré de notre système et donnée à la biliothèque centrale.\n"
 "\n"
 "Merci d'utiliser la bourse aux livres !\n"
@@ -1194,16 +1193,16 @@ msgstr ""
 #, python-format
 msgid ""
 "\n"
-"Hi !<br />\n"
+"Hi!<br />\n"
 "<br />\n"
 "One of your book (Title: <b>%(title)s</b>, exemplar id: <b>%(id)s</b>) has "
-"been sold ! You can come to AGEPoly's desk to claim your money.<br />\n"
+"been sold! You can come to AGEPoly's desk to claim your money.<br />\n"
 "<br />\n"
-"Thanks you for using the book exchange !<br />\n"
+"Thank you for using the book exchange!<br />\n"
 "<br />\n"
-"Bests,<br />\n"
+"Best,<br />\n"
 "<br />\n"
-"The AGEPoly's book exchange,<br />\n"
+"AGEPoly's book exchange,<br />\n"
 "<br />\n"
 "<br />\n"
 "<i>(This email is sent automaticaly when a book is sold)</i>"
@@ -1228,16 +1227,16 @@ msgstr ""
 #, python-format
 msgid ""
 "\n"
-"Hi !\n"
+"Hi!\n"
 "\n"
-"One of your book (Title: %(title)s, exemplar id: %(id)s) has been sold ! You "
+"One of your book (Title: %(title)s, exemplar id: %(id)s) has been sold! You "
 "can come to AGEPoly's desk to claim your money.\n"
 "\n"
-"Thanks you for using the book exchange !\n"
+"Thank you for using the book exchange!\n"
 "\n"
-"Bests,\n"
+"Best,\n"
 "\n"
-"The AGEPoly's book exchange,\n"
+"AGEPoly's book exchange,\n"
 "\n"
 "\n"
 "(This email is sent automaticaly when a book is sold)"
@@ -1261,13 +1260,13 @@ msgstr ""
 #, python-format
 msgid ""
 "\n"
-"Hi !<br />\n"
+"Hi!<br />\n"
 "<br />\n"
-"The book exemplar <b>%(id)s</b> has a new price: <b>%(price)s</b> !<br />\n"
+"The book exemplar <b>%(id)s</b> has a new price: <b>%(price)s</b>!<br />\n"
 "<br />\n"
-"Bests,<br />\n"
+"Best,<br />\n"
 "<br />\n"
-"The book exchange,"
+"AGEPoly's book exchange,"
 msgstr ""
 "\n"
 "Bonjour !<br />\n"
@@ -1286,9 +1285,9 @@ msgid ""
 "\n"
 "The book exemplar %(id)s has a new price: %(price)s !\n"
 "\n"
-"Bests,\n"
+"Best,\n"
 "\n"
-"The book exchange,"
+"AGEPoly's book exchange,"
 msgstr ""
 "\n"
 "Bonjour !\n"
