Update boursobouquins septembre 2022

--- a/polybookexchange/locale/fr/LC_MESSAGES/django.po
+++ b/polybookexchange/locale/fr/LC_MESSAGES/django.po
@@ -469,13 +469,13 @@ msgstr "Détails de la proposition"
 #: templates/polybookexchange/candidate_fiche.html:8
 msgid ""
 "You have to <a href='javascript:window.print()'>print</a> this page and put "
-"it inside the book you bring to AGEPoly's event from Tuesday, March 1, 2022 "
-"to Thursday, March 3, 2022 between 9:00 AM and 5:00 PM at CE1 515 (or "
+"it inside the book you bring to AGEPoly's event from Tuesday, September 27, 2022 "
+"to Thursday, September 29, 2022 between 8:45 AM and 5:15 PM at CO floor 0 (or "
 "present this document there)"
 msgstr ""
 "Vous devez <a href='javascript:window.print()'>imprimer</a> cette page et la "
-"mettre dans le livre, puis ammener le livre à l'évènement de l'AGEPoly du "
-"Mardi 1er Mars au Jeudi 3 Mars entre 9h et 17h en CE1 515 (ou bien présenter "
+"mettre dans le livre, puis amener le livre à l'évènement de l'AGEPoly du "
+"Mardi 27 Septembre au Jeudi 29 Septembre entre 8h45 et 17h15 en CO sous-sol (ou bien présenter "
 "le document sur votre téléphone avec le livre)"
 
 #: templates/polybookexchange/candidate_fiche.html:13
@@ -895,12 +895,12 @@ msgstr ""
 #: templates/polybookexchange/exemplar.html:84
 #, python-format
 msgid ""
-"To buy this book, please come to AGEPoly's book exchange from Tuesday, March "
-"1, 2022 to Thursday, March 3, 2022 between 9:00 AM and 5:00 PM at CE1 515 "
+"To buy this book, please come to AGEPoly's book exchange from Tuesday, September 27, 2022 "
+"to Thursday, September 29, 2022 between 8:45 AM and 5:15 PM at CO floor 0"
 "and find the book number <b>%(id)s</b>!"
 msgstr ""
-"Pour acheter ce livre, merci de venir à la bourse aux bouquins en CE1 515 "
-"entre 9h et 17h du Mardi 1er Mars au Jeudi 3 Mars et trouvez le livre n°<b>"
+"Pour acheter ce livre, merci de venir à la bourse aux bouquins en CO sous-sol "
+"entre 8h45 et 17h15 du Mardi 27 Septembre au Jeudi 29 Septembre et trouvez le livre n°<b>"
 "%(id)s</b> !"
 
 #: templates/polybookexchange/exemplar.html:95
@@ -1269,25 +1269,25 @@ msgstr ""
 #: templates/polybookexchange/propose.html:16
 msgid ""
 "This page is the first step in the process to sell your book. You will pre-"
-"register the book in our database. You will then get a recepie that you need "
-"to bring your book at AGEPoly's event (from Tuesday, March 1, 2022 to "
-"Thursday, March 3, 2022 between 9:00 AM and 5:00 PM at CE1 515)."
+"register the book in our database. You will then get a receipt that you need "
+"to bring your book at AGEPoly's event (from Tuesday, September 27, 2022 to "
+"Thursday, September 29, 2022 between 8:45 AM and 5:15 PM at CO floor 0)."
 msgstr ""
 "Cette page est la première étape du processus de mise en vente de votre "
 "livre. Vous allez pré-enregistrer le livre dans notre base de données. Vous "
 "recevrez ensuite une feuille que vous devrez apporter à l'évènement de "
-"l'AGEPoly du Mardi 1er Mars au Jeudi 3 Mars entre 9h et 17h en CE1 515 (ou "
+"l'AGEPoly du Mardi 27 Septembre au Jeudi 29 Septembre entre 8h45 et 17h15 en CO sous-sol (ou "
 "bien présenter le document sur votre téléphone avec le livre)."
 
 #: templates/polybookexchange/propose.html:19
 msgid ""
 "Once the book is submitted, you have to bring it to AGEPoly's book exchange "
-"at CE1 515 from Tuesday, March 1, 2022 to Thursday, March 3, 2022 between "
-"9:00 AM and 5:00 PM!"
+"at CO floor 0 from Tuesday, September 27, 2022 to Thursday, September 29, 2022 between "
+"8:45 AM and 5:15 PM!"
 msgstr ""
 "Dès que livre est enregistré, vous devez l'amener à la bourse aux livres de "
-"l'AGEPoly en CE1 515 entre Mardi 1er Mars et Mercredi 3 Mars 2022 de 9h à "
-"17h ! "
+"l'AGEPoly en CO sous-sol entre le Mardi 27 Septembre et le Mercredi 29 Septembre 2022 de 8h45 à "
+"17h15 ! "
 
 #: templates/polybookexchange/propose.html:22
 msgid "Please accepts terms!"
